test/corpus/expressions.txt
================================================================================
Integer constant
================================================================================

a: 10

--------------------------------------------------------------------------------

(source_file
  (value_definition
    name: (identifier)
    value: (number)))

================================================================================
Float constant
================================================================================

a: 10.2

--------------------------------------------------------------------------------

(source_file
  (value_definition
    name: (identifier)
    value: (number)))

================================================================================
Boolean constant
================================================================================

a: oui
b: non

--------------------------------------------------------------------------------

(source_file
  (value_definition
    name: (identifier)
    value: (true))
  (value_definition
    name: (identifier)
    value: (false)))

================================================================================
Identifier constant
================================================================================

rule:

rule . sub: rule

--------------------------------------------------------------------------------

(source_file
  (value_definition
	name: (identifier)
	value: (empty))
  (value_definition
	name: (identifier)
	value: (identifier)))
