test/corpus/mechanism.txt
==========================
Simple rule with `valeur`
==========================

règle:
  valeur: 10

---

(source_file
	(rule_definition
		name: (identifier)
		body: (rule_body
			(mechanism
			 (valeur
				(constant (number)))))))
